Added "Clean Code"

--- a/quest.yml
+++ b/quest.yml
@@ -5,6 +5,7 @@
  - Caching
  - [8 Fallacies of Networked Computing]
  - Domain Driven Design
+ - Clean Code
  - RESTful APIs
  - Asynchronous Integration
  - Databases: Normal Form (ADVANCED), Defining Tables and Schemas (ADVANCED), Tx Isolation Levels (ADVANCED)
